hphp/hack/test/typecheck/class_refinements/const-kind-mismatch.php.exp
File "const-kind-mismatch.php", line 10, characters 46-46:
Invalid class refinement (Typing[4470])
  File "const-kind-mismatch.php", line 10, characters 30-32:
  Constant `C` in `Box` is not a type, did you mean ctx?
File "const-kind-mismatch.php", line 12, characters 45-45:
Invalid class refinement (Typing[4470])
  File "const-kind-mismatch.php", line 12, characters 30-32:
  Constant `T` in `Box` is not a ctx, did you mean type?
